--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.3.0.QFJCNXM/miui_DAVINCI_V12.0.3.0.QFJCNXM_518c08987f_10.0.zip
+  ROM_URL: https://hugeota.d.miui.com/20.8.27/miui_MIMIX2S_20.8.27_27afad3705_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
