--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/20.8.27/miui_MIMIX2S_20.8.27_27afad3705_10.0.zip
+  ROM_URL: https://58-49-180-2.ksyungslb.com/bigota.d.miui.com/V12.0.4.0.QFXCNXM/miui_CRUX_V12.0.4.0.QFXCNXM_7592e70687_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
